Adding JWT + Swagger + Authentication // 8 hours
