# src/routes/router.ts
@@ -1,16 +1,16 @@
-import express, { NextFunction } from "express";
+import express from "express";
 import transaction from "./transactions";
 import account from "./accounts";
 import balance from "./balance";
 import swagger from "./swagger";
-import authentication from './authentication'
+import authRoute from "./authentication";
 
-//main router
+// Minain router
 const router = express.Router();
-
-router.use("/transactions", transaction);
-router.use("/accounts", account);
-router.use("/balance", balance);
+router.use("/api/transactions", transaction);
+router.use("/api/accounts", account);
+router.use("/api/balance", balance);
 router.use("/swagger", swagger);
-router.use('/authentication', authentication )
+router.use("/authentication", authRoute);
+
 export default router;
