# src/routes/transactions.ts
@@ -6,7 +6,7 @@ import {
   updateTransaction,
 } from "../controllers/transactions";
 import { validate, validateTransaction } from "../utils/validator";
-import { authentication } from "./authentication";
+import { authentication } from "../controllers/authentication";
 
 const route = express.Router();
 
@@ -17,7 +17,7 @@ route.post(
   validate,
   postTransacations
 );
-route.get("/", getAllTransactions);
+route.get("/", authentication, getAllTransactions);
 route.get("/:payer_id", getTransactionsByUserId);
 route.put("/:transaction_id", authentication, updateTransaction);
 
